bindings/c/whiteout_casc.h

/* ── Owned string list ───────── */

typedef struct whiteout_StringList whiteout_StringList;
size_t whiteout_casc_StringList_size(const whiteout_StringList* self);
/* Borrowed; valid until the list is destroyed. */
whiteout_CString whiteout_casc_StringList_at(whiteout_StringList* self, size_t index);
void whiteout_casc_StringList_delete(whiteout_StringList* self);
/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_CascCreateOptions whiteout_CascCreateOptions;
typedef struct whiteout_CascWriteOptions whiteout_CascWriteOptions;
/* ── CascCreateOptions ─────────────────────────────────────────────── */

/* Options for creating a new empty CASC storage. */
whiteout_CascCreateOptions* whiteout_casc_CascCreateOptions_new(void);
void whiteout_casc_CascCreateOptions_delete(whiteout_CascCreateOptions* self);
whiteout_CString whiteout_casc_CascCreateOptions_get_product(const whiteout_CascCreateOptions* self);
void whiteout_casc_CascCreateOptions_set_product(whiteout_CascCreateOptions* self, const char* value);
whiteout_CString whiteout_casc_CascCreateOptions_get_version(const whiteout_CascCreateOptions* self);
void whiteout_casc_CascCreateOptions_set_version(whiteout_CascCreateOptions* self, const char* value);
/* 1 GB. */
uint32_t whiteout_casc_CascCreateOptions_get_archiveMaxSize(const whiteout_CascCreateOptions* self);
void whiteout_casc_CascCreateOptions_set_archiveMaxSize(whiteout_CascCreateOptions* self, uint32_t value);
/* 64 KB. */
uint32_t whiteout_casc_CascCreateOptions_get_blteFrameSize(const whiteout_CascCreateOptions* self);
void whiteout_casc_CascCreateOptions_set_blteFrameSize(whiteout_CascCreateOptions* self, uint32_t value);
int32_t whiteout_casc_CascCreateOptions_get_rootFormat(const whiteout_CascCreateOptions* self);
void whiteout_casc_CascCreateOptions_set_rootFormat(whiteout_CascCreateOptions* self, int32_t value);
/* ── CascWriteOptions ─────────────────────────────────────────────── */

/* Options for writing a file into a CASC storage. */
whiteout_CascWriteOptions* whiteout_casc_CascWriteOptions_new(void);
void whiteout_casc_CascWriteOptions_delete(whiteout_CascWriteOptions* self);
uint32_t whiteout_casc_CascWriteOptions_get_localeFlags(const whiteout_CascWriteOptions* self);
void whiteout_casc_CascWriteOptions_set_localeFlags(whiteout_CascWriteOptions* self, uint32_t value);
uint32_t whiteout_casc_CascWriteOptions_get_contentFlags(const whiteout_CascWriteOptions* self);
void whiteout_casc_CascWriteOptions_set_contentFlags(whiteout_CascWriteOptions* self, uint32_t value);
int32_t whiteout_casc_CascWriteOptions_get_compress(const whiteout_CascWriteOptions* self);
void whiteout_casc_CascWriteOptions_set_compress(whiteout_CascWriteOptions* self, int32_t value);