bindings/java/src/main/java/whiteout/casc/internal/Native.java

// SPDX-License-Identifier: BSD-3-Clause
// AUTOGENERATED by tools/codegen/emit_java.py - do not edit.
package whiteout.casc.internal;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import whiteout.common.internal.NativeCommon;

/** FFM MethodHandle registry for this module. Internal — for codegen use. */
public final class Native {
    private Native() {}

    public static final MemoryLayout BYTES_LAYOUT = NativeCommon.BYTES_LAYOUT;
    public static final MemoryLayout CSTRING_LAYOUT = NativeCommon.CSTRING_LAYOUT;
    public static final MethodHandle whiteout_Bytes_free = NativeCommon.whiteout_Bytes_free;
    public static final MethodHandle whiteout_CString_free = NativeCommon.whiteout_CString_free;

    static MethodHandle find(String name, FunctionDescriptor fd) {
        return NativeCommon.find(name, fd);
    }

    public static final MethodHandle whiteout_casc_StringList_size = find(
        "whiteout_casc_StringList_size", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_StringList_at = find(
        "whiteout_casc_StringList_at", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_casc_StringList_delete = find(
        "whiteout_casc_StringList_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));

    // -- CascCreateOptions --
    public static final MethodHandle whiteout_casc_CascCreateOptions_new = find(
        "whiteout_casc_CascCreateOptions_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascCreateOptions_delete = find(
        "whiteout_casc_CascCreateOptions_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascCreateOptions_get_product = find("whiteout_casc_CascCreateOptions_get_product", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascCreateOptions_set_product = find("whiteout_casc_CascCreateOptions_set_product", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascCreateOptions_get_version = find("whiteout_casc_CascCreateOptions_get_version", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascCreateOptions_set_version = find("whiteout_casc_CascCreateOptions_set_version", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascCreateOptions_get_archiveMaxSize = find("whiteout_casc_CascCreateOptions_get_archiveMaxSize", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascCreateOptions_set_archiveMaxSize = find("whiteout_casc_CascCreateOptions_set_archiveMaxSize", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_casc_CascCreateOptions_get_blteFrameSize = find("whiteout_casc_CascCreateOptions_get_blteFrameSize", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascCreateOptions_set_blteFrameSize = find("whiteout_casc_CascCreateOptions_set_blteFrameSize", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_casc_CascCreateOptions_get_rootFormat = find("whiteout_casc_CascCreateOptions_get_rootFormat", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascCreateOptions_set_rootFormat = find("whiteout_casc_CascCreateOptions_set_rootFormat", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));

    // -- CascWriteOptions --
    public static final MethodHandle whiteout_casc_CascWriteOptions_new = find(
        "whiteout_casc_CascWriteOptions_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascWriteOptions_delete = find(
        "whiteout_casc_CascWriteOptions_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascWriteOptions_get_localeFlags = find("whiteout_casc_CascWriteOptions_get_localeFlags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascWriteOptions_set_localeFlags = find("whiteout_casc_CascWriteOptions_set_localeFlags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_casc_CascWriteOptions_get_contentFlags = find("whiteout_casc_CascWriteOptions_get_contentFlags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascWriteOptions_set_contentFlags = find("whiteout_casc_CascWriteOptions_set_contentFlags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_casc_CascWriteOptions_get_compress = find("whiteout_casc_CascWriteOptions_get_compress", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_casc_CascWriteOptions_set_compress = find("whiteout_casc_CascWriteOptions_set_compress", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
